--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
         "slim/slim": "2.*",
         "aura/sql": "2.*",
         "aura/sqlquery": "2.*",
-        "symfony/yaml": "2.6.*",
-        "hampel/json": "~2.0"
+        "aura/filter": "dev-develop-2",
+        "aura/sqlschema": "dev-master",
+        "symfony/yaml": "2.6.*"
     },
-    "autoload": {
-        "psr-0": {"": "src/"}
+    "require-dev": {
+        "phpunit/phpunit": "4.6.*"
     }
 }
