--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.6.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Nogo\\Framework\\": "src/"
+        }
     }
 }
