--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,27 @@
 {
-    "name": "nogo/framework",
-    "description": "mvc extension to slim framework",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Danilo Kühn",
-            "email": "dk@nogo-software.de",
-            "homepage": "http://nogo-software.de"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",
-        "slim/slim": "2.*",
-        "aura/sql": "2.*",
-        "aura/sqlquery": "2.*",
-        "aura/sqlschema": "2.*",
-        "symfony/yaml": "2.6.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.6.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "Nogo\\Framework\\": "src/"
-        }
+  "name": "nogo/framework",
+  "description": "mvc extension to slim framework",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Danilo Kühn",
+      "email": "dk@nogo-software.de",
+      "homepage": "http://nogo-software.de"
     }
+  ],
+  "require": {
+    "php": ">=5.4.0",
+    "slim/slim": "*",
+    "symfony/yaml": "2.6.*",
+    "illuminate/database": "*",
+    "kirkbushell/eloquence": "~1.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.6.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Nogo\\Framework\\": "src/"
+    }
+  }
 }
