--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
   "require": {
     "php": ">=5.4.0",
     "slim/slim": "*",
-    "symfony/yaml": "2.6.*",
-    "illuminate/database": "*",
-    "kirkbushell/eloquence": "~1.3"
+    "symfony/yaml": "2.6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.6.*"
